# src/Web/Controllers/MyJinyaController.php
@@ -2,11 +2,24 @@
 
 namespace Jinya\Cms\Web\Controllers;
 
+use BaconQrCode\Common\ErrorCorrectionLevel;
+use BaconQrCode\Renderer\Color\Gray;
+use BaconQrCode\Renderer\Color\Rgb;
+use BaconQrCode\Renderer\Image\ImagickImageBackEnd;
+use BaconQrCode\Renderer\ImageRenderer;
+use BaconQrCode\Renderer\Module\DotsModule;
+use BaconQrCode\Renderer\Module\RoundnessModule;
+use BaconQrCode\Renderer\RendererStyle\Fill;
+use BaconQrCode\Renderer\RendererStyle\RendererStyle;
+use BaconQrCode\Writer;
+use Endroid\QrCode\Color\Color;
+use Intervention\Image\ImageManager;
 use Jinya\Cms\Authentication\CurrentUser;
 use Jinya\Cms\Database\Artist;
 use Jinya\Cms\Database\Exceptions\EmptyResultException;
 use Jinya\Cms\Storage\ProfilePictureService;
 use Jinya\Cms\Web\Middleware\AuthorizationMiddleware;
+use Jinya\Cms\Web\Middleware\CheckRequiredFieldsMiddleware;
 use Jinya\Database\Exception\NotNullViolationException;
 use Jinya\Router\Attributes\Controller;
 use Jinya\Router\Attributes\HttpMethod;
@@ -104,5 +117,54 @@ class MyJinyaController extends BaseController
         $this->profilePictureService->saveProfilePicture(CurrentUser::$currentUser->id, $data);
 
         return $this->noContent();
+    }
+
+    /**
+     * @throws JsonException
+     * @throws NotNullViolationException
+     */
+    #[Route(HttpMethod::PUT, 'api/me/otp/app')]
+    #[Middlewares(new AuthorizationMiddleware())]
+    public function changeOtpModeToTotp(): ResponseInterface
+    {
+        $otp = CurrentUser::$currentUser->setTotpSecret();
+        $style = new RendererStyle(
+            512,
+            module: new DotsModule(DotsModule::LARGE),
+            fill: Fill::uniformColor(
+                new Gray(100),
+                new Rgb(25, 50, 76)
+            )
+        );
+        $pngRenderer = new ImageRenderer($style, new ImagickImageBackEnd());
+        $pngWriter = new Writer($pngRenderer);
+
+        $qrCode = ImageManager::imagick()
+            ->read($pngWriter->writeString($otp->getProvisioningUri(), ecLevel: ErrorCorrectionLevel::H()))
+            ->place(__ROOT__.'/assets/qrlogo.png', 'center')
+            ->toWebp();
+
+        return $this->json([
+            'secret' => $otp->getSecret(),
+            'qrCode' => $qrCode->toDataUri()
+        ]);
+    }
+
+    #[Route(HttpMethod::PUT, 'api/me/otp/app/verify')]
+    #[Middlewares(new AuthorizationMiddleware(), new CheckRequiredFieldsMiddleware(['code']))]
+    public function verifyOtpModeTotp(): ResponseInterface
+    {
+        $code = $this->body['code'];
+        if (CurrentUser::$currentUser->activateOtphp($code)) {
+            return $this->noContent();
+        }
+
+        return $this->json([
+            'success' => false,
+            'error' => [
+                'message' => 'The code is not valid',
+                'type' => 'code-invalid',
+            ],
+        ], self::HTTP_BAD_REQUEST);
     }
 }
